--- a/frontend/admin-login.html
+++ b/frontend/admin-login.html
@@ -41,6 +41,11 @@
                         <button type="submit" class="btn btn-primary btn-lg" id="loginBtn">Login</button>
                     </div>
                 </form>
+                <div class="text-center mt-3">
+                    <a href="/index.html" class="text-decoration-none">
+                        <i class="bi bi-arrow-left"></i> Back to Website
+                    </a>
+                </div>
             </div>
             </div>
         </div>
