--- a/frontend/about.html
+++ b/frontend/about.html
@@ -44,7 +44,7 @@
     <!-- About Content -->
     <section class="py-5">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center mb-5">
                 <div class="col-lg-6">
                     <div class="about-image-placeholder">
                         <img src="images/about.jpg" alt="About Leo Club" class="img-fluid rounded shadow" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -54,9 +54,167 @@
                     </div>
                 </div>
                 <div class="col-lg-6 mt-4 mt-lg-0">
-                    <h2 class="mb-4 text-primary">About Leo Club</h2>
-                    <p class="lead">The Leo Club of Kathmandu Alka is a non-profit community-based youth organization under Lions Clubs International.</p>
-                    <p>We are dedicated to serving our community and making a positive impact through various service projects and initiatives. Our mission is to empower youth to become leaders while contributing to meaningful community service.</p>
+                    <h2 class="mb-4 text-primary">About Leo Club of Kathmandu Alka</h2>
+                    <p class="lead">The Leo Club of Kathmandu Alka is a youth organization sponsored by the Lions Club of Kathmandu Alka. It focuses on community service and personal development for its members.</p>
+                    <p>The Leo Club of Kathmandu Alka was chartered on <strong>February 10, 2016</strong>. It operates as part of District 325 F, Multiple District 325, Nepal.</p>
+                    <div class="d-flex flex-wrap gap-3 mt-4">
+                        <div class="badge bg-primary fs-6 p-2"><i class="bi bi-card-list me-2"></i>Club ID: 126845</div>
+                        <div class="badge bg-secondary fs-6 p-2"><i class="bi bi-geo-alt me-2"></i>Jawalakhel, Lalitpur</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Theme Section -->
+            <div class="row mb-5">
+                <div class="col-12">
+                    <div class="card bg-primary text-white shadow-lg">
+                        <div class="card-body text-center py-5">
+                            <h3 class="mb-3">Theme L.Y. 2024/25</h3>
+                            <h1 class="display-4 fw-bold mb-0" style="font-family: 'Playfair Display', serif;">LEAD with PASSION</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Vision & Mission -->
+            <div class="row g-4 mb-5">
+                <div class="col-lg-6">
+                    <div class="card h-100 shadow border-0">
+                        <div class="card-body p-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="bg-primary rounded-circle p-3 me-3">
+                                    <i class="bi bi-eye-fill text-white fs-4"></i>
+                                </div>
+                                <h3 class="text-primary mb-0">Our Vision</h3>
+                            </div>
+                            <p class="card-text">To cultivate a community of compassionate and responsible young leaders who are dedicated to serving their communities and creating positive change.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card h-100 shadow border-0">
+                        <div class="card-body p-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="bg-success rounded-circle p-3 me-3">
+                                    <i class="bi bi-bullseye text-white fs-4"></i>
+                                </div>
+                                <h3 class="text-success mb-0">Our Mission</h3>
+                            </div>
+                            <p class="card-text">To provide opportunities for young people to develop leadership skills, gain experience in community service, and contribute to the well-being of their local, national, and international communities through various projects focusing on areas such as healthcare, education, environmental protection, and aiding the disadvantaged.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Strategic Priorities -->
+            <div class="row mb-5">
+                <div class="col-12">
+                    <h3 class="text-center mb-4 text-primary">Strategic Priorities of Tenure</h3>
+                    <div class="row g-4">
+                        <div class="col-md-6 col-lg-3">
+                            <div class="card h-100 text-center border-0 shadow-sm">
+                                <div class="card-body">
+                                    <div class="bg-primary bg-opacity-10 rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center" style="width: 80px; height: 80px;">
+                                        <i class="bi bi-person-badge-fill fs-1 text-primary"></i>
+                                    </div>
+                                    <h5 class="card-title">Identify Leadership Roles</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-3">
+                            <div class="card h-100 text-center border-0 shadow-sm">
+                                <div class="card-body">
+                                    <div class="bg-success bg-opacity-10 rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center" style="width: 80px; height: 80px;">
+                                        <i class="bi bi-people-fill fs-1 text-success"></i>
+                                    </div>
+                                    <h5 class="card-title">Collaboration & Partnership</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-3">
+                            <div class="card h-100 text-center border-0 shadow-sm">
+                                <div class="card-body">
+                                    <div class="bg-warning bg-opacity-10 rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center" style="width: 80px; height: 80px;">
+                                        <i class="bi bi-person-lines-fill fs-1 text-warning"></i>
+                                    </div>
+                                    <h5 class="card-title">One to One Mentorship</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-3">
+                            <div class="card h-100 text-center border-0 shadow-sm">
+                                <div class="card-body">
+                                    <div class="bg-danger bg-opacity-10 rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center" style="width: 80px; height: 80px;">
+                                        <i class="bi bi-fire fs-1 text-danger"></i>
+                                    </div>
+                                    <h5 class="card-title">Igniting Passion</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Working Areas -->
+            <div class="row mb-5">
+                <div class="col-12">
+                    <div class="card bg-light border-0 shadow">
+                        <div class="card-body p-4">
+                            <h3 class="text-center mb-4 text-primary">Our Working Areas</h3>
+                            <p class="text-center mb-4">Leo Club of Kathmandu Alka has been actively working in <strong>Bagmati Province</strong> (Kathmandu, Lalitpur & Bhaktapur region) to address:</p>
+                            <div class="row text-center">
+                                <div class="col-md-3 col-6 mb-3">
+                                    <i class="bi bi-shield-check fs-1 text-primary d-block mb-2"></i>
+                                    <span>Gender Violence</span>
+                                </div>
+                                <div class="col-md-3 col-6 mb-3">
+                                    <i class="bi bi-trophy fs-1 text-success d-block mb-2"></i>
+                                    <span>Leadership Skills</span>
+                                </div>
+                                <div class="col-md-3 col-6 mb-3">
+                                    <i class="bi bi-people fs-1 text-warning d-block mb-2"></i>
+                                    <span>Mentorship Program</span>
+                                </div>
+                                <div class="col-md-3 col-6 mb-3">
+                                    <i class="bi bi-heart fs-1 text-danger d-block mb-2"></i>
+                                    <span>Inclusion</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Impact Stats -->
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="text-center mb-4 text-primary">Our Impact</h3>
+                    <div class="row g-4 text-center">
+                        <div class="col-md-4">
+                            <div class="card border-0 shadow-sm h-100">
+                                <div class="card-body py-4">
+                                    <h2 class="display-4 fw-bold text-primary">19.5K+</h2>
+                                    <p class="text-muted mb-0">Individual Reach</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card border-0 shadow-sm h-100">
+                                <div class="card-body py-4">
+                                    <h2 class="display-4 fw-bold text-success">1000+</h2>
+                                    <p class="text-muted mb-0">Community People Awareness</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card border-0 shadow-sm h-100">
+                                <div class="card-body py-4">
+                                    <h2 class="display-4 fw-bold text-warning">5+</h2>
+                                    <p class="text-muted mb-0">Partnerships & Collaborations</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -67,12 +225,15 @@
         <div class="footer-diagonal-lines"></div>
         <div class="footer-content">
             <p class="mb-0 footer-copyright">&copy; 2025 Leo Club of Kathmandu Alka - All rights reserved</p>
-            <div class="footer-social">
-                <a href="#" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
-                <a href="#" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-                <a href="#" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+            <div class="footer-social-wrapper">
+                <span class="footer-social-label">Follow us on</span>
+                <div class="footer-social">
+                    <a href="https://www.facebook.com/leoktmalka" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/leo_ktmalka/" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
+                    <a href="https://x.com/leo_ktmalka" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://www.linkedin.com/company/lckathmandualka/" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.youtube.com/@leoclubofkathmandualka1417" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+                </div>
             </div>
         </div>
     </footer>
