--- a/frontend/awards.html
+++ b/frontend/awards.html
@@ -57,7 +57,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-primary">Leo of the Year</h5>
                             <hr>
-                            <p class="card-text fw-bold">Leo International Award</p>
+                            <p class="card-text fw-bold">Leo Sonika Giri</p>
                             <p class="card-text">The most prestigious award recognizing outstanding leadership, service, and dedication to the Leo Club mission.</p>
                         </div>
                     </div>
@@ -122,12 +122,15 @@
         <div class="footer-diagonal-lines"></div>
         <div class="footer-content">
             <p class="mb-0 footer-copyright">&copy; 2025 Leo Club of Kathmandu Alka - All rights reserved</p>
-            <div class="footer-social">
-                <a href="#" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
-                <a href="#" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-                <a href="#" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+            <div class="footer-social-wrapper">
+                <span class="footer-social-label">Follow us on</span>
+                <div class="footer-social">
+                    <a href="https://www.facebook.com/leoktmalka" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/leo_ktmalka/" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
+                    <a href="https://x.com/leo_ktmalka" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://www.linkedin.com/company/lckathmandualka/" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.youtube.com/@leoclubofkathmandualka1417" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+                </div>
             </div>
         </div>
     </footer>
@@ -136,4 +139,3 @@
     <script src="js/main.js"></script>
 </body>
 </html>
-
