--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -52,8 +52,7 @@
                             <h5 class="card-title mb-3">Address</h5>
                             <p class="card-text mb-0">
                                 Leo Club of Kathmandu Alka<br>
-                                Jawalakhel, Kathmandu, Nepal<br>
-                                44600
+                                Jawalakhel, Lalitpur, Nepal
                             </p>
                         </div>
                     </div>
@@ -63,7 +62,7 @@
                         <div class="card-body p-4">
                             <i class="bi bi-envelope-fill contact-icon"></i>
                             <h5 class="card-title mb-3">Email</h5>
-                            <p class="card-text mb-0">info@leoclubkathmandu.org</p>
+                            <p class="card-text mb-0"><a href="mailto:kathmandualka@gmail.com">kathmandualka@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -116,12 +115,15 @@
         <div class="footer-diagonal-lines"></div>
         <div class="footer-content">
             <p class="mb-0 footer-copyright">&copy; 2025 Leo Club of Kathmandu Alka - All rights reserved</p>
-            <div class="footer-social">
-                <a href="#" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
-                <a href="#" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-                <a href="#" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+            <div class="footer-social-wrapper">
+                <span class="footer-social-label">Follow us on</span>
+                <div class="footer-social">
+                    <a href="https://www.facebook.com/leoktmalka" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/leo_ktmalka/" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
+                    <a href="https://x.com/leo_ktmalka" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://www.linkedin.com/company/lckathmandualka/" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.youtube.com/@leoclubofkathmandualka1417" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+                </div>
             </div>
         </div>
     </footer>
