--- a/frontend/events.html
+++ b/frontend/events.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Leo Club Logo" height="40" class="d-inline-block align-top">
+                <img src="images/logo.png" alt="Leo Club Logo" height="55" class="d-inline-block align-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -44,92 +44,110 @@
     <!-- Events -->
     <section class="py-5">
         <div class="container">
-            <div class="row g-4 mb-4">
+            <div id="eventsGrid" class="row g-4">
                 <div class="col-md-4">
                     <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
-                        <div class="event-image" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); height: 200px; display: flex; align-items: center; justify-content: center;">
-                            <i class="bi bi-heart-fill text-white" style="font-size: 48px;"></i>
+                        <div class="event-image" style="height: 200px; overflow: hidden;">
+                            <img src="images/guardians-events.jpg" alt="Guardians of Health: SRHR Initiative" class="img-fluid w-100 h-100" style="object-fit: cover;">
                         </div>
                         <div class="event-body p-4">
                             <span class="badge bg-primary mb-2">Upcoming</span>
-                            <h5 class="fw-bold mb-2">Community Service</h5>
-                            <p class="text-muted small mb-3"><strong>Date:</strong> Feb 2026 &middot; <strong>Location:</strong> Local Community Center</p>
+                            <h5 class="fw-bold mb-2">Guardians of Health: SRHR Initiative</h5>
+                            <p class="text-muted small mb-3"><strong>Date:</strong> Feb 2026 &middot; <strong>Location:</strong> Kathmandu</p>
+                            <p class="text-muted small">Sexual Reproductive Health Rights program in collaboration with Y-Peer Nepal & M4M, focusing on youth health awareness and education.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <small class="text-muted"><i class="bi bi-calendar3"></i> Feb 2026</small>
-                                <a href="#" class="btn btn-sm btn-primary">View Details</a>
+                                <a href="event-detail.html?id=1" class="btn btn-sm btn-primary">View Details</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
-                        <div class="event-image" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%); height: 200px; display: flex; align-items: center; justify-content: center;">
-                            <i class="bi bi-book-fill text-white" style="font-size: 48px;"></i>
+                        <div class="event-image" style="height: 200px; overflow: hidden;">
+                            <img src="images/induction-event.jpg" alt="District Induction & Leadership Training" class="img-fluid w-100 h-100" style="object-fit: cover;">
                         </div>
                         <div class="event-body p-4">
                             <span class="badge bg-danger mb-2">Upcoming</span>
-                            <h5 class="fw-bold mb-2">Educational Drive</h5>
-                            <p class="text-muted small mb-3"><strong>Date:</strong> Mar 2026 &middot; <strong>Location:</strong> Shree Primary School</p>
+                            <h5 class="fw-bold mb-2">District Induction & Leadership Training</h5>
+                            <p class="text-muted small mb-3"><strong>Date:</strong> Mar 2026 &middot; <strong>Location:</strong> Kathmandu</p>
+                            <p class="text-muted small">Comprehensive leadership development program for new and existing members, focusing on organizational skills and community service.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <small class="text-muted"><i class="bi bi-calendar3"></i> Mar 2026</small>
-                                <a href="#" class="btn btn-sm btn-danger">View Details</a>
+                                <a href="event-detail.html?id=2" class="btn btn-sm btn-danger">View Details</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
-                        <div class="event-image" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%); height: 200px; display: flex; align-items: center; justify-content: center;">
-                            <i class="bi bi-globe-fill text-white" style="font-size: 48px;"></i>
+                        <div class="event-image" style="height: 200px; overflow: hidden;">
+                            <img src="images/first-aid-event.jpg" alt="First Aid Training Program" class="img-fluid w-100 h-100" style="object-fit: cover;">
                         </div>
                         <div class="event-body p-4">
                             <span class="badge bg-info mb-2">Upcoming</span>
-                            <h5 class="fw-bold mb-2">Environmental Drive</h5>
-                            <p class="text-muted small mb-3"><strong>Date:</strong> Apr 2026 &middot; <strong>Location:</strong> Riverbank Cleanup Zone</p>
+                            <h5 class="fw-bold mb-2">First Aid Training Program</h5>
+                            <p class="text-muted small mb-3"><strong>Date:</strong> Apr 2026 &middot; <strong>Location:</strong> Kathmandu</p>
+                            <p class="text-muted small">Collaborative first aid training event with other Leo Clubs, equipping members with essential life-saving skills.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <small class="text-muted"><i class="bi bi-calendar3"></i> Apr 2026</small>
-                                <a href="#" class="btn btn-sm btn-info">View Details</a>
+                                <a href="event-detail.html?id=3" class="btn btn-sm btn-info">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
+                        <div class="event-image" style="height: 200px; overflow: hidden;">
+                            <img src="images/human.png" alt="Human Rights Day: Documentary Screening" class="img-fluid w-100 h-100" style="object-fit: cover;">
+                        </div>
+                        <div class="event-body p-4">
+                            <span class="badge bg-success mb-2">Past Event</span>
+                            <h5 class="fw-bold mb-2">Human Rights Day: Documentary Screening</h5>
+                            <p class="text-muted small mb-3"><strong>Date:</strong> December 10, 2024 &middot; <strong>Location:</strong> Kathmandu</p>
+                            <p class="text-muted small">Documentary screening on LGBTQ+ culture and rights, promoting awareness and inclusivity in the community.</p>
+                            <div class="mt-3">
+                                <a href="event-detail.html?id=4" class="btn btn-sm btn-outline-success">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
+                        <div class="event-image" style="height: 200px; overflow: hidden;">
+                            <img src="images/hero3.jpg" alt="Youth Leadership Award 2024" class="img-fluid w-100 h-100" style="object-fit: cover;">
+                        </div>
+                        <div class="event-body p-4">
+                            <span class="badge bg-success mb-2">Past Event</span>
+                            <h5 class="fw-bold mb-2">Youth Leadership Award 2024</h5>
+                            <p class="text-muted small mb-3"><strong>Date:</strong> November 2024 &middot; <strong>Location:</strong> Kathmandu</p>
+                            <p class="text-muted small">Recognition program honoring outstanding members for their exceptional leadership and community service contributions.</p>
+                            <div class="mt-3">
+                                <a href="event-detail.html?id=5" class="btn btn-sm btn-outline-success">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
+                        <div class="event-image" style="height: 200px; overflow: hidden;">
+                            <img src="images/dashain-event.jpg" alt="Dashain Cultural Celebration" class="img-fluid w-100 h-100" style="object-fit: cover;">
+                        </div>
+                        <div class="event-body p-4">
+                            <span class="badge bg-success mb-2">Past Event</span>
+                            <h5 class="fw-bold mb-2">Dashain Cultural Celebration</h5>
+                            <p class="text-muted small mb-3"><strong>Date:</strong> October 2024 &middot; <strong>Location:</strong> Kathmandu</p>
+                            <p class="text-muted small">Annual cultural celebration bringing members together to celebrate Nepali traditions and strengthen community bonds.</p>
+                            <div class="mt-3">
+                                <a href="event-detail.html?id=6" class="btn btn-sm btn-outline-success">View Details</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
-                        <div class="event-image" style="background: linear-gradient(135deg, #e0f7fa 0%, #b2ebf2 100%); height: 200px; display: flex; align-items: center; justify-content: center;">
-                            <i class="bi bi-tree-fill text-white" style="font-size: 48px;"></i>
-                        </div>
-                        <div class="event-body p-4">
-                            <h5 class="fw-bold mb-2">Community Clean-up Drive</h5>
-                            <p class="text-muted small mb-3"><strong>Date:</strong> December 15, 2025 &middot; <strong>Location:</strong> Jawalakhel Park</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
-                        <div class="event-image" style="background: linear-gradient(135deg, #ffe6e6 0%, #ffd6d6 100%); height: 200px; display: flex; align-items: center; justify-content: center;">
-                            <i class="bi bi-droplet-fill text-white" style="font-size: 48px;"></i>
-                        </div>
-                        <div class="event-body p-4">
-                            <h5 class="fw-bold mb-2">Blood Donation Camp</h5>
-                            <p class="text-muted small mb-3"><strong>Date:</strong> December 20, 2025 &middot; <strong>Location:</strong> Community Hall, Kathmandu</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
-                        <div class="event-image" style="background: linear-gradient(135deg, #fff2d6 0%, #ffe7b3 100%); height: 200px; display: flex; align-items: center; justify-content: center;">
-                            <i class="bi bi-gift-fill text-white" style="font-size: 48px;"></i>
-                        </div>
-                        <div class="event-body p-4">
-                            <h5 class="fw-bold mb-2">Fundraising Gala</h5>
-                            <p class="text-muted small mb-3"><strong>Date:</strong> December 28, 2025 &middot; <strong>Location:</strong> Hotel Yak & Yeti</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!-- Pagination -->
+            <div id="eventsPagination" class="mt-5 d-flex justify-content-center"></div>
         </div>
     </section>
 
@@ -138,18 +156,22 @@
         <div class="footer-diagonal-lines"></div>
         <div class="footer-content">
             <p class="mb-0 footer-copyright">&copy; 2025 Leo Club of Kathmandu Alka - All rights reserved</p>
-            <div class="footer-social">
-                <a href="#" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
-                <a href="#" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-                <a href="#" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+            <div class="footer-social-wrapper">
+                <span class="footer-social-label">Follow us on</span>
+                <div class="footer-social">
+                    <a href="https://www.facebook.com/leoktmalka" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/leo_ktmalka/" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
+                    <a href="https://x.com/leo_ktmalka" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://www.linkedin.com/company/lckathmandualka/" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.youtube.com/@leoclubofkathmandualka1417" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+                </div>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/events.js"></script>
 </body>
 </html>
 
