--- a/frontend/membership.html
+++ b/frontend/membership.html
@@ -137,12 +137,15 @@
         <div class="footer-diagonal-lines"></div>
         <div class="footer-content">
             <p class="mb-0 footer-copyright">&copy; 2025 Leo Club of Kathmandu Alka - All rights reserved</p>
-            <div class="footer-social">
-                <a href="#" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
-                <a href="#" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-                <a href="#" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+            <div class="footer-social-wrapper">
+                <span class="footer-social-label">Follow us on</span>
+                <div class="footer-social">
+                    <a href="https://www.facebook.com/leoktmalka" class="footer-social-link" aria-label="Facebook" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/leo_ktmalka/" class="footer-social-link" aria-label="Instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
+                    <a href="https://x.com/leo_ktmalka" class="footer-social-link" aria-label="Twitter" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://www.linkedin.com/company/lckathmandualka/" class="footer-social-link" aria-label="LinkedIn" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.youtube.com/@leoclubofkathmandualka1417" class="footer-social-link" aria-label="YouTube" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
+                </div>
             </div>
         </div>
     </footer>
