--- a/frontend/events.html
+++ b/frontend/events.html
@@ -131,7 +131,7 @@
                 <div class="col-md-4">
                     <div class="event-card shadow-sm rounded-lg overflow-hidden h-100">
                         <div class="event-image" style="height: 200px; overflow: hidden;">
-                            <img src="images/dashain-event.jpg" alt="Dashain Cultural Celebration" class="img-fluid w-100 h-100" style="object-fit: cover;">
+                            <img src="images/dashain.jpg" alt="Dashain Cultural Celebration" class="img-fluid w-100 h-100" style="object-fit: cover;">
                         </div>
                         <div class="event-body p-4">
                             <span class="badge bg-success mb-2">Past Event</span>
