--- a/frontend/index.html
+++ b/frontend/index.html
@@ -217,7 +217,7 @@
     <section class="featured-projects py-5 bg-light">
         <div class="container">
             <div class="text-center mb-5">
-                <h2 class="section-title fw-bold mb-3">Featured Projects L.Y. 2024/25</h2>
+                <h2 class="section-title fw-bold mb-3">Featured Projects</h2>
                 <p class="text-muted">Highlights from our impactful signature projects and campaigns</p>
             </div>
             <div class="row g-4">
